--- a/index.html
+++ b/index.html
@@ -14,24 +14,19 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top justify-content-end">
     <a class="navbar-brand" href="#">Atsushi Shimabukuro</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Top</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Works</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-      </ul>
-    </div>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Top</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Works</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
   </nav>
 
   <div class="jumbotron text-center">
