--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
         <p>Comming soon...</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="ion-social-github"></i></a></li>
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-        </ul>
+            <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
+            <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
+            <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
+            <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
+          </ul>
       </div>
     </div>
   </div>
@@ -271,11 +272,11 @@
   <div id="footer" class="text-center">
     <div class="container">
       <div class="socials-media text-center">
-
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
+          <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
         </ul>
       </div>
 
