--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <!-- meta -->
@@ -69,11 +69,12 @@
         <p>Comming soon...</p>
 
         <ul class="list-unstyled list-social">
-            <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
-            <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
-            <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
-            <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
-          </ul>
+          <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
+          <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
+          <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
+          <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
+          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
+        </ul>
       </div>
     </div>
   </div>
@@ -273,10 +274,11 @@
     <div class="container">
       <div class="socials-media text-center">
         <ul class="list-unstyled">
-          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
           <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
           <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
+          <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
+          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
         </ul>
       </div>
 
