--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Shimabkra Portfolio</title>
+  <title>shimabkra Portfolio</title>
   <meta content="" name="keywords">
   <meta content="" name="description">
 
