--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
           <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
           <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
-          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
+          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i
+                class="ion-email"></i></a></li>
         </ul>
       </div>
     </div>
@@ -109,7 +110,6 @@
     </div>
   </div>
   <!-- end section about us -->
-
 
   <!-- start section services -->
   <div id="services">
@@ -172,9 +172,8 @@
   </div>
   <!-- end section services -->
 
-
   <!-- start section portfolio -->
-  <div id="portfolio" class="text-center paddsection">
+  <div id="portfolio" class="text-center">
 
     <div class="container">
       <div class="section-title text-center">
@@ -260,7 +259,6 @@
                 <li><span>080-1063-3277</span></li>
                 <li><span>shimabukuro.base@gmail.com</span></li>
               </ul>
-
             </div>
           </div>
         </div>
@@ -278,7 +276,8 @@
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
           <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
           <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
-          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i class="ion-email"></i></a></li>
+          <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i
+                class="ion-email"></i></a></li>
         </ul>
       </div>
 
@@ -305,9 +304,6 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/isotope/isotope.pkgd.min.js"></script>
-
-  <!-- Contact Form JavaScript File -->
-  <script src="contactform/contactform.js"></script>
 
   <!-- Template Main Javascript File -->
   <script src="js/main.js"></script>
