--- a/index.html
+++ b/index.html
@@ -61,13 +61,10 @@
 
   <!-- start section header -->
   <div id="header" class="home">
-
     <div class="container">
       <div class="header-content">
         <h1>I'm <span class="typed"></span></h1>
         <p>Freelance Engineer</p>
-        <p>Comming soon...</p>
-
         <ul class="list-unstyled list-social">
           <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
@@ -85,7 +82,6 @@
   <div id="about" class="paddsection">
     <div class="container">
       <div class="row justify-content-between">
-
         <div class="col-lg-4 ">
           <div class="div-img-bg">
             <div class="about-img">
@@ -93,18 +89,28 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-7">
           <div class="about-descr">
-
-            <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy
-              crafting brand identities, icons, & ilustration work. </p>
-            <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge
-              friend of mine told me what Occidental is. The European languages are members of the same family.English
-              person.</p>
-
+            <p class="p-heading">
+              島袋 敦司(しまぶくろ あつし)
+            </p>
+            <p class="separator">
+              1986年1月生まれ、沖縄 or 東京在住。フリーランスのエンジニアです。
+              バックエンド or コアシステム(Java, .Net)が得意です。
+              プログラムだけでなく一通りインフラ周りも触れます。
+              現在は、フロントエンドも趣味で触っています。
+              音楽は、Jazz、Classic(インストものの生楽器系)が好き。読書は、雑食。好きなご飯、立ち食いそば。
+            </p>
+            <p class="p-heading">
+                History
+            </p>
+            <p class="separator">
+              2006.04 - 都内のレコーディングスタジオでアシスタントとして勤務。<br>
+              2007.03 - 同上挫折後、しばらくコールセンターで社会勉強。<br>
+              2011.05 - 結婚を気に、沖縄に帰郷後、沖縄の中小SIerに入社。<br>
+              2020.01 - フリーランスになる。<br>
+            </p>  
           </div>
-
         </div>
       </div>
     </div>
