--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
               バックエンド or コアシステム(Java, .Net)が得意です。
               プログラムだけでなく一通りインフラ周りも触れます。
               現在は、フロントエンドも趣味で触っています。
-              音楽は、Jazz、Classic(インストものの生楽器系)が好き。読書は、雑食。好きなご飯、立ち食いそば。
+              音楽は、Jazz、Classic(インストものの生楽器系)。
+              読書は、雑食。好きなご飯、立ち食いそば。
+              ペット、うさぎ(斑)。
             </p>
             <p class="p-heading">
                 History
@@ -128,7 +130,6 @@
           <i class="ion-ios-browsers-outline"></i>
           <span>UI/UX DESIGN</span>
           <p class="separator">To an English person, it will seem like simplified English,told me what </p>
-
         </div>
 
         <div class="services-block">
