--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
           <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
           <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
           <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i
                 class="ion-email"></i></a></li>
         </ul>
@@ -101,7 +100,7 @@
               現在は、フロントエンドも趣味で触っています。
               音楽は、Jazz、Classic(インストものの生楽器系)。
               読書は、雑食。好きなご飯、立ち食いそば。
-              ペット、うさぎ(斑)。
+              ペット、うさぎ。
             </p>
             <p class="p-heading">
                 History
@@ -282,7 +281,6 @@
           <li><a href="https://github.com/shimabkra"><i class="ion-social-github"></i></a></li>
           <li><a href="https://www.facebook.com/atsushi.shimabukuro.71"><i class="ion-social-facebook"></i></a></li>
           <li><a href="https://www.instagram.com/shimabkra/"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="tel:080-1063-3277"><i class="ion-ios-telephone"></i></a></li>
           <li><a href="mailto:shimabukuro.base@gmail.com?subject=Hi shimabkra. I saw the portfolio."><i
                 class="ion-email"></i></a></li>
         </ul>
