--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>shimabkra Portfolio</title>
   <meta name="keywords" content="島袋,敦司,しまぶくろ,あつし,shimabkra,フリーランス,エンジニア,沖縄,東京">
-  <meta name="description" content="フリーランスエンジニア 島袋 敦司(シマブクロ アツシ)のポートフォリオサイトです。沖縄と東京で主に活動していますが、いろいろな場所・人と仕事がしたいです。簡単にどんなことができるか、どんな経歴かまとめているので興味があればどうぞ。仕事のキリが良いときに、時間見つけて不定期に更新します。" >
+  <meta name="description" content="フリーランスエンジニア 島袋 敦司のポートフォリオサイトです。IT開発全般やってます。沖縄と東京で主に活動していますが、いろいろな人・場所で仕事がしたいです。簡単に自分のことをまとめているので興味があればどうぞ。仕事のキリが良いときに、気が向いたら更新します。" >
 
   <!-- Google Fonts -->
   <link
