--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
               島袋 敦司(しまぶくろ あつし)
             </p>
             <p class="separator">
-              1986年1月生まれ、沖縄 or 東京在住。フリーランスのエンジニアです。
-              バックエンド or コアシステム(Java, .Net)が得意です。
+              1986年1月生まれ、沖縄 and 東京在住。フリーランスのエンジニアです。
+              バックエンド and コアシステム(Java, .Net)が得意です。
               プログラムだけでなく一通りインフラ周りも触れます。
               現在は、フロントエンドとRustも趣味で勉強中。
               好きなもの。音楽は、Jazz、Classic(インストものの生楽器系)。
-              読書は、雑食。好きなご飯、立ち食いそば。
+              読書は、ジャンル問わず雑食。好きなご飯、立ち食いそば。
               ペット、うさぎ。
             </p>
             <p class="p-heading">
